--- a/index.html
+++ b/index.html
@@ -9,13 +9,24 @@
 <body>
   <h1>やることリスト</h1>
   <div class="input">
-    <input type="date" class="input__date" id="date">
-    <input type="text" class="input__text" id="text">
-    <button id="add">追加</button>
+    <input type="date" class="input__date" id="Date">
+    <input type="text" class="input__text" id="Text">
+    <button id="btn">追加</button>
   </div>
-  <ul>
-    <li>aa</li>
-  </ul>
+  <table id="targetTable">
+    <tr>
+      <td>日付</td>
+      <td>テキスト</td>
+      <td><button>完了</button></td>
+      <td><button>削除</button></td>
+    </tr>
+    <tr>
+      <td>日付</td>
+      <td>テキスト</td>
+      <td><button>完了</button></td>
+      <td><button>削除</button></td>
+    </tr>
+  </table>
   
 
   <script src="js/index.js"></script>
