--- a/index.html
+++ b/index.html
@@ -24,16 +24,12 @@
       let i = tr.sectionRowIndex;
       const storage = localStorage;
       const key = JSON.parse(storage.getItem('todo'));
-      let len = key.length;
+      let len = key.length; // ストレージ、キー、todoの要素数
       tr.parentNode.deleteRow(tr.sectionRowIndex); // trのインデックスを取得して行を削除する
+      
       delete key[i]; // １回データを取り出して、配列に変換したあと特定の要素を削除
-      key.splice(i, 1);
-
-      for (i = ++i; i <= len; i++) {
-        storage.setItem('todo', key[i]);
-      }
-      delete key[i];
-      storage.setItem('todo', JSON.stringify(key));
+      key.splice(i, 1); // 配列からも特定の要素を削除
+      storage.setItem('todo', JSON.stringify(key)); // セットし直す
   }
   function completeRow(obj) {
     tr = obj.parentNode.parentNode; // 完了ボタンを押下された行を取得
